--- a/experiments/config/nerf/bacon_lr.ini
+++ b/experiments/config/nerf/bacon_lr.ini
@@ -1,8 +1,8 @@
-experiment_name = bacon_lego_lowres
+experiment_name = bacon_lego_lr
 gpu = 0
 num_workers = 0
 chunk_size_train = 4096
-chunk_size_eval = 4096
+chunk_size_eval = 256
 hidden_layers = 8
 img_size = 64
 dataset_path = ../data/nerf_synthetic/lego
