--- a/experiments/config/nerf/bacon_lr.ini
+++ b/experiments/config/nerf/bacon_lr.ini
@@ -1,19 +1,19 @@
-experiment_name = bacon_lego_increasing_features
+experiment_name = bacon_lego_less_features
 gpu = 0
 num_workers = 0
-chunk_size_train = 2048     # 4096
+chunk_size_train = 4096     
 chunk_size_eval = 256
 hidden_layers = 8
 img_size = 32        # 64
 dataset_path = ../data/nerf_synthetic/lego
 steps_til_summary = 1000
 lr = 0.001
-hidden_features = 256
+hidden_features = 196
 multiscale = true
 use_resized = true
-reuse_filters = true
-samples_per_ray = 128
-samples_per_view = 1024
+reuse_filters = false
+samples_per_ray = 128            # 128
+samples_per_view = 1024         # 1024
 logging_root = ../logs
 num_steps = 1000000
 steps_til_ckpt = 50000
